--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~13.0.0",
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
+    "@awesome-cordova-plugins/clipboard": "^5.40.0",
     "@capacitor/app": "1.1.1",
     "@capacitor/camera": "^1.3.1",
     "@capacitor/core": "3.4.3",
@@ -30,6 +31,7 @@
     "@capacitor/status-bar": "1.0.8",
     "@capacitor/storage": "^1.2.5",
     "@ionic/angular": "^6.0.0",
+    "cordova-clipboard": "^1.3.0",
     "crypto-js": "^4.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
